# shellsy

./: .gitignore  README.md  attack.py  auto-py-to-exe.json  build-setup.nsi  build.bat  compile.bat  go.mod  index.html  main.go  project.toml  pyproject.toml  shellsy.bat  shellsy.nsddef  shellsy.nsdinc  shellsy.spec  shellsy.sublime-project  shellsy.sublime-workspace  special_input.py  tbtest.py  test.shellsy
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
__/: main.py
__/dictionary/: en.yaml
__/djamago/: demo.py
ceasar/: README.md  setup.py
ceasar/ceasar/: ceasar.py
ceasar/ceasar.egg-info/: PKG-INFO  SOURCES.txt
cmd/: dload.go  exchangerate.go  exchangerate.go.hide  root.go  version.go
djamago/: __init__.py
dockerfiles/: dev.dockerfile
manifests/k/ken-morel/shellsy/0.1.0/: ken-morel.shellsy.installer.yaml  ken-morel.shellsy.locale.en-UK.yaml  ken-morel.shellsy.yaml
mt/: README.md  setup.py
mt/mt.egg-info/: PKG-INFO  SOURCES.txt
shellsy/: __init__.py  expressions.py  main.go
shellsy/topics/: main.py
src/: .coverage  comberload.py  del.py  history.txt  main.py  setup.py  shellsy.spec  test.go  test.shellsy
src/shellsy/: __init__.py  __main__.py  args.py  exceptions.py  help.py  history.txt  interpreter.py  lang.py  lexer.py  plugin.py  settings.py  shell.py  shellsy.py  types.py
src/shellsy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/shellsy/editor/: __init__.py
src/shellsy/repl/: __init__.py
src/tests/: test_parse_args.py  test_preview.py
storelsb/: README.md  setup.py
storelsb/storelsb/: shellsy.py
storelsb/storelsb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
