[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "shellsy"
version = "v1.0.0a1.dev1"
authors = "ken-morel"
classifiers = [
        "Intended Audience :: Developers",
        "Development Status :: 2 - Pre-Alpha",
        "License :: OSI Approved :: GPLv3.0 License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Natural Language :: English",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]
dependencies = [
    "prompt_toolkit",
    "comberload",
    "pyoload",
    "rich"
]

description

dynamic

entry-points

gui-scripts

keywords

license

maintainers

name

optional-dependencies

readme

requires-python

scripts

urls

versiontt5tttttttttttgg
