[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "shellsy"
version = "v1.0.0a1.dev1"
authors = "ken-morel"
classifiers = [
        "Intended Audience :: Developers",
        "Development Status :: 2 - Pre-Alpha",
        "License :: OSI Approved :: GPLv3.0 License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Natural Language :: English",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]
dependencies = [
    "comberload",
    "pyoload",
    "rich"
]

description = "Build over amongst in and expose your sets of command line utilities"
#dynamic
entry-points = "shellsy.__main__:main"
gui-scripts = "shellsy.ide.__main__:main"
keywords = "shellsy console plugin prompt_toolkit rich"
license = "GPLv3.0"
maintainers = ["ken-morel"]
optional-dependencies = [
    "prompt_toolkit",
    "ttkbootstrap"
]
readme = "README.md"
requires-python = ">=3.10"
#scripts
#urls
