[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "shellsy"
version = "v1.0.0a1.dev1"
classifiers = [
        "Intended Audience :: Developers",
        "Development Status :: 2 - Pre-Alpha",
        "License :: OSI Approved :: GPLv3.0 License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Natural Language :: English",
        "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "comberload",
    "rich"
]

description = "Build over amongst in and expose your sets of command line utilities"
#dynamic
entry-points = "shellsy.__main__:main"
keywords = "shellsy console plugin prompt_toolkit rich"
license = "GPLv3.0"
maintainers = [
    {name="ken-morel", email="engonken8@gmail.com"}
]
authors = [
    {name="ken-morel", email="engonken8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
#scripts
#urls
[project.optional-dependencies]
gui = ["ttkbootstrap"]
cli = [
  "prompt_toolkit",
]
[project.scripts]
shellsy = "shellsy.__main__:main"

[project.gui-scripts]
shellsy.ide = "shellsy.ide.__main__:main"
